# template-application-python

./: .ecrc  .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  setup.cfg  setup.py
.github/: labeler.yml
.github/workflows/: build.yaml  ci.yaml  deps.yaml  sync-charts.yaml
cicd/docker/: linux.armv6.dockerfile  linux.dockerfile  windows.dockerfile
cicd/gitlab/: build-images.yaml  unit-tests.yaml
scripts/: image.mk  lint.mk  version.sh
scripts/image/: build.sh  common.sh  push.sh
src/: __main__.py
