[metadata]
long_description = file: README.md
license = MIT
license_file = LICENSE.txt

[flake8]
exclude =
    .git,__pycache__,docs/,pipenv/vendor/,pipenv/patched,get-pipenv.py,
    .eggs/,setup.py,tests/fixtures/
ignore =
    # The default ignore list:
    E121,E123,E126,E226,E24,E704

[isort]
atomic=true
lines_after_imports=2
lines_between_types=1
multi_line_output=5
line_length=80
not_skip=__init__.py
known_first_party =
    test
ignore_trailing_comma=true

[mypy]
ignore_missing_imports=true
follow_imports=skip
html_report=mypyhtml
python_version=3.8
mypy_path=typeshed/pyi:typeshed/imports

[tool:pytest]
addopts = --strict -vvl --cov=src --cov-report=term-missing
plugins = xdist
testpaths = test
norecursedirs =
    .* build
    dist
    CVS
    _darcs
    {arch}
    *.egg
    docs

filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[bdist_wheel]
universal = 1
